Update tests and implementation.